--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lexik/translation-bundle",
+    "name": "pierrebilac/translation-bundle",
     "type": "symfony-bundle",
     "description": "This bundle allows to import translation files content into the database and provide a GUI to edit translations.",
     "keywords": [
@@ -24,16 +24,16 @@
     "require": {
         "php": "^8.2",
         "doctrine/doctrine-bundle": "^2.2",
-        "doctrine/orm": "^2.4",
+        "doctrine/orm": "^3.1",
         "monolog/monolog": "^3.2",
-        "symfony/asset": "^7.0",
-        "symfony/form": "^7.0",
-        "symfony/framework-bundle": "^7.0",
-        "symfony/security-csrf": "^7.0",
-        "symfony/translation": "^7.0",
-        "symfony/twig-bundle": "^7.0",
-        "symfony/validator": "^7.0",
-        "symfony/yaml": "^7.0"
+        "symfony/asset": "7.1.*",
+        "symfony/form": "7.1.*",
+        "symfony/framework-bundle": "7.1.*",
+        "symfony/security-csrf": "7.1.*",
+        "symfony/translation": "7.1.*",
+        "symfony/twig-bundle": "7.1.*",
+        "symfony/validator": "7.1.*",
+        "symfony/yaml": "7.1.*"
     },
     "require-dev": {
         "ext-mongodb": "*",
